Report reflexion about IoT

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -102,3 +102,9 @@
     title = {Coolors.co},
     url = {https://coolors.co}
 }
+
+@article {
+    gardena,
+    title = {Det smarte havearbejde},
+    url = {https://www.gardena.com/dk/produkter/smart/}
+}
