--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -44,5 +44,39 @@ Den anden løsning blev fravalgt, da der skulle meget arbejde til at få server 
 \subsection{Image analysis}
 
 \subsection{IoT devices}
+Undervejs i projektet undersøgte vi hvilke køkkenhave-relaterede produkter, der enten allerede fandtes som IoT eller kunne give mening at gøre til en IoT.
+
+\subsubsection{Jordtermometer}
+Der findes mange jordtermometre på markedet, men det er ikke lykkedes os at finde nogen IoT-jordtermometre. Derudover lagde vi mærke til, at de heller ikke kommer med en guide til hvilke planter, der tåler hvilken temperatur. Dette skal brugeren selv finde ud af ved f.eks. at købe frøposer med denne information på forsiden, søge på internettet eller læse i bøger. 
+
+Det kunne derfor måske give mening at lave et samarbejde mellem appen og et jordtermometer. Det ville kræve, at man først lavede en række brugertests med brugere af jordtermometre, for at opleve deres arbejdspraksis og se, om det giver mening for dem at bruge en app.
+
+I det tilfælde, at brugerne oplever det vanskeligt at finde information, at de generelt har meget at holde styr eller på anden vis kan få værdi af en app, ville det være oplagt at lave. Man kunne udvide appens sidemenu med en "Jordtemperatur"-tab. Herinde kunne man måske bruge noget bluetooth eller lignende til at forbinde til sit jordtermometer og appen ville derefter kunne vise dig information såsom:
+
+\begin{enumerate}
+    \item{Jordtemperaturen}
+    \item{Planter, der kan klare denne jordtemperatur}
+    \item{Hvordan de planter, du allerede har sået, tåler denne jordtemperatur}
+\end{enumerate}
+
+Derudover kunne man udvide leksikonnet til at have information om planternes fortrukne jodtemperatur.
+
+For at denne idé kunne realiseres, ville man behøve et samarbejde med en udgiver af jordtermometre, samt yderligere data om planter i forhold til jordtemperatur.
+
+\subsubsection{Gardena vandingssystem}
+Gardena Smart System har en app, der kan forbindes til et vandingssystem og/eller græsslåmaskine. Her er vandingssystemet relevant for køkkenhaver og drivhuse. Deres produkt har en sensor, der afgør hvornår der skal vandes. Den kigger også på vejrudsigten. Brugeren altid sætte den igang eller stoppe en vanding, samt sætte en tidsplan.
+
+Dette produkt er klart mere nøjagtig og automatisk end vores feature, der kun tager højde for vejret og ikke er tilknyttet et produkt.
+
+Man kunne måske lave et samarbejde med Gardena og få andre features med i deres app, så man på den måde også kan holde styr på sin køkkenhave. Der er dog flere pointer, der taler i mod sådan et samarbejde:
+
+\begin{enumerate}
+    \item{Gardena lægger på deres hjemmeside meget vægt på, at systemet klarer alt for dig. De skriver b.la. at man kan tage på ferie uden at bekymre sig (REFERENCE TIL SIDEN HER). Vores app lægger mere vægt på udbredning af information, der gør brugeren i stand til selv at handle og tage beslutninger. For at opklare dette punkt, ville man blive nødt til at tale med både brugere af Gardena og (fremtidige) brugere af vores app, samt Gardena for at afstemme forventninger, behov og mål for appen.}
+    \item{Appen ville kunne alt for meget og dermed blive forvirrende. Her ville det igen være nødvendigt at interview eller observere adskillige bruger for at klarlægge dette.}
+    \item{Gardena lader til gerne at ville omfavne haven som helhed, i og med, at de også har en græsslåmaskine, og ikke blot køkkenhavedelen. De ville måske ikke have lyst til at fokusere så meget på køkkenhave, som de features vi har implementeret. Dette ville kræve møder med Gardena for at klarlægge deres forretningsstrategi}
+\end{enumerate}
+
+Hvis disse pointer alle blev taget i betragtning, klarlagt og pegede på, at et samarbejde ville give god værdi for brugerne og virksomheden, ville en samlægning af de to apps virkelig kunne give styrke - man ville få en app, der gav brugeren mulighed for frihed eller kontrol efter ønske samt give dem meget information og mange features. 
+
 
 
