Agile process in report

--- a/report/process.tex
+++ b/report/process.tex
@@ -1,3 +1,13 @@
 \section{Process}
 Udviklingsprocessen er blevet udført agilt ved hjælp af sprints. Vi har i alt kørt 12 sprints, på hver en uge. I starten af processen, lå fokus meget på at designe og diskutere appen, for at gennemtænke alle features og designvalg på forhånd samt skrive det ned. Det sikrer, at appen holder sin røde tråd, selvom der er flere til at udarbejde den. Denne del resulterede i sketches og wireframs, og en styleguide bestående af skrifttyper, størrelser på tekst og afstande samt farveskemaer. De kan ses i bilag X.
 
+Starten på vores udviklingsprocess kørte meget efter bogen i forhold til SCRUM-metoden, dog uden retrospective. Undervejs fandt vi dog ud af, at det var meget overkill når vi kun var to, som sad fysisk sammen langt det meste af tiden. Der var for mange små detaljer, der hele tiden skulle udfyldes på trods af vores gode kommunikation. Vi besluttede derfor, at vi ikke behøvede at:
+
+\begin{itemize}
+   \item Skrive dagsorden hver gang, vi havde en arbejdsdag
+   \item Skrive dybdegående user stories for hver item i vores backlog - en to-do liste var tit nok, og i enkelte tilfælde, havde vi kun brug for en titel
+   \item Sætte mærker som "Code" eller "Documentation" på små opgaver
+\end{itemize}
+
+På den måde, har vi arbejdet meget agilt i og med, at selv den agile måde at arbejde på har skulle tilpasse sig undervejs til vores arbejdsmetode.
+
